# realtime-svg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.yaml.example  dump.rdb  opencode.jsonc
.codex/: config.toml
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: on-release.yml  prepare-release.yml  release.yml
.specify/memory/: constitution.md
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: lib.rs  main.rs  stream_sender.rs
crates/backend/src/assets/: mod.rs
crates/backend/src/route/: fallback.rs  index.rs  mod.rs  static.rs
crates/backend/src/route/api/: mod.rs
crates/backend/src/route/api/auth/: http_post_token.rs  mod.rs
crates/backend/src/route/api/session/: http_get.rs  http_get_session_id.rs  http_post.rs  http_put_session_id.rs  mod.rs
crates/backend/src/route/api/user/: http_get_session_id.rs  http_get_sessions.rs  http_post_session.rs  http_put_session.rs  mod.rs
crates/backend/src/route/stream/: http_get.rs  http_get_user_stream.rs  mod.rs
crates/backend/src/route/well_known/: http_get_jwks_json.rs  mod.rs
crates/backend/tests/: config_test.rs  helpers.rs  us1_session_creation_test.rs  us2_authorization_test.rs  us3_compatibility_test.rs  us4_jwt_flow_test.rs  us5_list_sessions_test.rs  user_session_test.rs
crates/common/: Cargo.toml
crates/common/src/: auth.rs  browser_engine.rs  config.rs  errors.rs  jwk.rs  jwt.rs  lib.rs  session_data.rs  share.rs  state.rs  user_data.rs  whoami.rs
crates/frontend/: Cargo.toml  index.html  styles.css
crates/frontend/src/: lib.rs  main.rs  routes.rs  types.rs
crates/frontend/src/api/: auth.rs  mod.rs  public_session.rs  user_session.rs
crates/frontend/src/auth/: mod.rs  storage.rs  token.rs
crates/frontend/src/components/: header.rs  login_form.rs  mod.rs  session_detail.rs  session_form.rs  session_list.rs
deploy/: .gitignore  secret.yaml.example  values-schema.yaml
deploy/helm/realtime-svg/: Chart.yaml  README.md  values.yaml
deploy/helm/realtime-svg/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  service.yaml
deploy/kubernetes/: README.md
deploy/kubernetes/realtime-svg/: install.yaml
deploy/pulumi/: README.md
deploy/pulumi/realtime-svg/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
deploy/pulumi/realtime-svg-example/: .gitignore  Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
deploy/terraform/: README.md
deploy/terraform/realtime-svg/: .terraformignore  configmap.tf  deployment.tf  ingress.tf  main.tf  outputs.tf  redis.tf  secret.tf  terraform.tfvars.example  variables.tf
deploy/terraform/realtime-svg-example/: README.md  main.tf
docs/deployment/: architecture.md  configuration-reference.md  helm-guide.md  pulumi-guide.md  terraform-guide.md
specs/002-user-session-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-user-session-auth/checklists/: requirements.md
specs/002-user-session-auth/contracts/: auth-api.yaml  user-session-api.yaml
specs/004-frontend-user-session/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-frontend-user-session/checklists/: requirements.md
specs/004-frontend-user-session/contracts/: frontend-api.md
specs/005-cli-config-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cli-config-enhancement/checklists/: requirements.md
specs/006-multiplatform-docker-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-multiplatform-docker-build/checklists/: requirements.md
specs/006-multiplatform-docker-build/contracts/: dockerfile-contract.md  github-actions-workflow.md
specs/007-k8s-deployment-packaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-k8s-deployment-packaging/checklists/: requirements.md
specs/007-k8s-deployment-packaging/contracts/: dockerfile-contract.md  github-actions-workflow.md
