[workspace]
resolver = "2"
members = ["crates/common", "crates/backend", "crates/frontend"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
bytes = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
include_dir = "0.7"
anyhow = "1"
redis = { version = "0.32", features = [
    "tls-rustls",
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster-async",
    "connection-manager",
    "uuid",
] }
humantime = "2"
tera = { version = "1" }
mime_guess = { version = "2" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
argon2 = { version = "0.5", features = ["std"] }

figment = { version = "0.10", features = ["json", "env", "yaml"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
