[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
xmltree = { workspace = true }

redis = { workspace = true }
axum = { workspace = true }
humantime = { workspace = true }
futures = { workspace = true }

tera = { workspace = true }
