[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
xmltree = { workspace = true }

redis = { workspace = true }
axum = { workspace = true }
humantime = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

tera = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }

clap = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }