[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

redis = { workspace = true }
axum = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

tera = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }

clap = { workspace = true }
figment = { workspace = true }
anyhow = { workspace = true }
