[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
wasm-logger = "0.2"
log = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "InputEvent",
    "SubmitEvent",
    "EventTarget",
] }
